--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,12 @@
-/* Add CSS Styling */
+.avatar.proportioned {
+    width: 200px;
+    height: 200px;
+}
+.avatar.distorted {
+    height: 300px;
+    width: 200px;
+}
+.original {
+    width: 300px;
+    height: 300px;
+}
