--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,40 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  font-size: 16px;
 }
 
 .card {
-  width: 400px;
+  width: 600px;
   background: #fff;
-  margin: 16px auto;
+  padding: 8px;
+  margin: auto;
+
 }
 
 .title {
   background: #e3f4ff;
+  margin: 18px;
+  padding: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 18px;
+  padding: 20px 10px;
 }
 
 .button-container {
+  padding:10px 0px;
   background: #e3f4ff;
+  margin: 18px;
+  text-align: center;
 }
 
 button {
+  margin-left: 220px;
+  display: block;
+  padding: 10px 20px;
   background: white;
   border: 1px solid #eee;
 }
